2024-05-30  dwm  <dwm@nomnom.mcplex.net>

	* tagged as libDwmCredence-0.1.29

2024-05-29  dwm  <dwm@ria.mcplex.net>

	* classes/src/DwmCredenceUtils.cc:
	Replace use of variable-length arrays since it's a clang extension
	(though part of C99, it's not standard C++).

2024-03-17  dwm  <dwm@ria.mcplex.net>

	* tagged as libDwmCredence-0.1.28

	* classes/src/DwmCredencePeer.cc: Change deprecated
	expires_from_now() to expires_after().  In Connect(), reset the
	expiration timeout to 60 seconds after we connect.

2023-12-29  Daniel McRobb  <dwm@spark.mcplex.net>

	* tagged as libDwmCredence-0.1.27

2023-12-29  dwm  <dwm@nomnom.mcplex.net>

	* configure, configure.ac, dwm.m4: clean up some old cruft just
	to speed up configure.

2023-12-29  Daniel W. McRobb  <dwm@kiva.mcplex.net>

	* tagged as libDwmCredence-0.1.26

2023-12-29  dwm  <dwm@nomnom.mcplex.net>

	* classes/Makefile, classes/include/Makefile,
	classes/tests/Makefile: fix 'distclean' target.

2023-12-29  Daniel McRobb  <dwm@spark.mcplex.net>

	* tagged as libDwmCredence-0.1.25

	* dwm.m4, configure.ac, configure: Add and use new
	DWM_REQUIRES_DWMPKG macro.

2023-12-28  Daniel McRobb  <dwm@thrip.mcplex.net>

	* tagged as libDwmCredence-0.1.24

	* classes/src/DwmCredencePeer.cc: Tweak EndPointString() so we can
	still use it after stream is closed.

2023-12-19  Daniel W. McRobb  <dwm@depot.mcplex.net>

	* tagged as libDwmCredence-0.1.23

2023-12-16  Daniel McRobb  <dwm@spark.mcplex.net>

	* classes/include/DwmCredenceAuthenticator.hh,
	classes/include/DwmCredenceKeyExchanger.hh,
	classes/include/DwmCredencePeer.hh,
	classes/include/DwmCredenceUtils.hh,
	classes/src/DwmCredenceAuthenticator.cc,
	classes/src/DwmCredenceKeyExchanger.cc,
	classes/src/DwmCredencePeer.cc, classes/src/DwmCredenceUtils.cc,
	classes/tests/TestChallenge.cc, classes/tests/TestPeer.cc,
	configure, configure.ac:

	Added support for boost::asio::local::stream_protocol::socket.
	Not ideal at the moment since I duplicated the streams, but it