@@ -1,6 +1,7 @@
 APPS       = credence
 APPSCLEAN  = $(APPS:%=%-clean)
 TARPREP    = $(APPS:%=%-tarprep)
+DISTCLEAN  = $(APPS:%=%-distclean)
 
 all:: ${APPS}
 
@@ -14,3 +15,7 @@ ${TARPREP}::
 clean:: ${APPSCLEAN}
 ${APPSCLEAN}::
 	${MAKE} -C $(patsubst %-clean,%,$@) clean
+
+distclean:: ${DISTCLEAN}
+${DISTCLEAN}::
+	${MAKE} -C $(patsubst %-distclean,%,$@) distclean
